stock-city/external-dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
  namespace: argo # 추가
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
      annotations:
        eks.amazonaws.com/role-arn: arn:aws:iam::477159410287:role/sua-EKSExternalDNSRole # 추가
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.14.0
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=itbank08.link # 변경
            - --provider=aws
            - --policy=sync # upsert-only (생성, 업데이트) / sync (생성, 업데이트, 삭제) / create-only (생성)
            - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
            - --registry=txt
            - --txt-owner-id=Z00635613ERGDRY3ESU8T # Route53 -> 호스팅 영역 -> 호스팅 영역 세부 정보 -> 호스팅 영역 ID
